--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
     <div class="container" id="price-service"></div>
     <div class="container" id='summary'></div>
     <div class="container" id='reviews'></div>
-    <script src='http://localhost:2002/title-service.js'></script>
-    <script src='http://localhost:3000/priceBundle.js'></script>
-    <script src='http://localhost:4000/reviews.js'></script>
-    <script src='http://localhost:1220/summary.js'></script>
+    <script src='http://localhost:5500/files/title-service.js'></script>
+    <script src='http://localhost:5500/files/priceBundle.js'></script>
+    <script src='http://localhost:5500/files/reviews.js'></script>
+    <script src='http://localhost:5500/files/summary.js'></script>
   </body>
 </html>
