Resetting submodule service-reviews

--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,18 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
+    <!-- <link href="styles.css" rel="stylesheet"> -->
     <!-- <link href="http://localhost:5500/files/styles.css" rel="stylesheet"> -->
-    <link rel="stylesheet" type="text/css" href="http://localhost:5500/files/style.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="http://localhost:1220/files/style.css" /> -->
   </head>
   <body >
     <div class="container" id='title-service'></div>
-    <div class="container" id="price-service"></div>
+    <!-- <div class="container" id="price-service"></div> -->
     <div class="container" id='summary'></div>
     <div class="container" id='reviews'></div>
     <script src='http://localhost:5500/files/title-service.js'></script>
-    <script src='http://localhost:5500/files/reviews.js'></script>
-    <script src='http://localhost:5500/files/summary.js'></script>
+    <!-- <script src='http://localhost:5500/files/summary.js'></script> -->
+    <!-- <script src='http://localhost:5500/files/reviews.js'></script> -->
     <script src='http://localhost:5500/files/priceBundle.js'></script>
   </body>
 </html>
