Reset server and html urls for ec2 addresses

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,11 @@
   </head>
   <body >
     <div class="container" id='title-service'></div>
-    <!-- <div class="container" id="price-service"></div> -->
     <div class="container" id='summary'></div>
     <div class="container" id='reviews'></div>
-    <script src='http://localhost:5500/files/title-service.js'></script>
-    <script src='http://localhost:5500/files/summary.js'></script>
-    <script src='http://localhost:5500/files/reviews.js'></script>
-    <script src='http://localhost:5500/files/priceBundle.js'></script>
+    <script src='http://ec2-34-219-131-242.us-west-2.compute.amazonaws.com/files/title-service.js'></script>
+    <script src='http://ec2-34-219-131-242.us-west-2.compute.amazonaws.com/files/summary.js'></script>
+    <script src='http://ec2-34-219-131-242.us-west-2.compute.amazonaws.com/files/reviews.js'></script>
+    <script src='http://ec2-34-219-131-242.us-west-2.compute.amazonaws.com/files/priceBundle.js'></script>
   </body>
 </html>
