Add price-service url

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         console.log('DOM content loaded!')
         if(document.querySelector('#price-service')){
           var script = document.createElement('script');
-          script.src = 'http://ec2-34-219-131-242.us-west-2.compute.amazonaws.com:5500/files/priceBundle.js';
+          script.src = 'https://sdc-price-service.s3.us-west-1.amazonaws.com/priceBundle.js';
           document.body.appendChild(script)
         }
       });
