--- a/public/index.html
+++ b/public/index.html
@@ -25,21 +25,25 @@
     <div class="container" id='summary'></div>
     <div class="container" id='aggReview'></div>
     <div class="container" id='reviews'></div>
+    <div class="container" id='price-service'></div>
     <!-- <script async src='http://ec2-35-177-204-177.eu-west-2.compute.amazonaws.com:2002/files/title-service.js'></script>
     <script async src='http://127.0.0.1:5500/files/summary.js'></script>
     <script async src='http://127.0.0.1:5500/files/aggReview.js'></script>
     <script async src='http://127.0.0.1:5500/files/reviews.js'></script>
     <script async src='http://127.0.0.1:5500/files/alsoEnjoyedBundle.js'></script> -->
-    <script>
+    <!-- <script>
       document.addEventListener("DOMContentLoaded", function(event) {
         console.log('DOM content loaded!')
         if(document.querySelector('#price-service')){
           var script = document.createElement('script');
-          script.src = 'https://sdc-price-service.s3.us-west-1.amazonaws.com/priceBundle.js';
+          script.src = 'http://localhost:3000/priceBundle.js';
           document.body.appendChild(script)
         }
       });
-    </script>
+    </script> -->
     <!-- <script src='http://ec2-34-219-131-242.us-west-2.compute.amazonaws.com:5500/files/priceBundle.js'></script> -->
+    <script async src='https://sdc-price-service.s3.us-west-1.amazonaws.com/priceBundle.js'></script>
   </body>
 </html>
+
+<!-- https://sdc-price-service.s3.us-west-1.amazonaws.com/priceBundle.js' -->
